docs/i18n/fr/docusaurus-plugin-content-docs/version-0.19.0/wordpress-plugin.md
---
sidebar_position: 1
sidebar_label: Extension WordPress
title: Extension de sécurité WordPress
---

# Extension de sécurité WordPress

AMWScan Antimalware Scanner permet aux administrateurs WordPress d'exécuter et d'examiner les vérifications AMWScan sans quitter le tableau de bord. Il stocke les rapports, les sauvegardes, la quarantaine et l'état des analyses hors du répertoire scanné.

## Choisir une édition

| Édition | Téléchargement | Éditeur de fichiers du navigateur | Restauration des fichiers mis en quarantaine |
| --- | --- | --- | --- |
| **AMWScan Antimalware Scanner Lite** | WordPress.org / `amwscan-lite-X.Y.Z.zip` | Non | Non |
| **AMWScan Antimalware Scanner** | GitHub / `amwscan-X.Y.Z.zip` | Oui | Oui |

Lite est un paquet distinct, sûr pour le Store : le code réservé à la version complète est absent de l'archive et non seulement désactivé. Les deux éditions utilisent le répertoire `amwscan`, le domaine de texte, les réglages et les données, et ne peuvent donc pas être actives en même temps. Désactivez et supprimez l'édition installée avant de passer à l'autre.

## Installer et activer {#install-and-activate}

1. Téléchargez la dernière version du plugin WordPress.
2. Dans WordPress, ouvrez **Extensions > Ajouter > Téléverser une extension** et téléversez le ZIP de version, ou copiez le contenu de la version dans `wp-content/plugins/amwscan`.
3. Activez **AMWScan Antimalware Scanner**.
4. Ouvrez **Antimalware > Réglages** pour confirmer la cible de scan et la politique.

Le plugin exige PHP 7.4 ou plus récent. Activez l'extension PHP `zip` pour inspecter les archives et restaurer les fichiers WordPress de confiance.

## Lancer votre première analyse

Ouvrez **Antimalware** et sélectionnez **Run scan now**. Les analyses s'exécutent en arrière-plan via WP-Cron ; le tableau de bord met à jour le statut et la progression pendant qu'une analyse est active.

![Antimalware Scanner dashboard showing scan status, activity, security overview, and recent reports](/img/wordpress-plugin/dashboard.png)

Quand l'analyse est terminée, sélectionnez **Open report** pour inspecter chaque détection. Commencez par le mode rapport uniquement, qui est le mode par défaut : il enregistre les détections sans modifier les fichiers.

:::caution

Examinez chaque détection et créez une sauvegarde avant d'utiliser les actions de nettoyage, suppression ou quarantaine. Les actions automatiques sur les fichiers nécessitent un paramètre explicite, et chaque action de rapport vérifie que le fichier correspond encore à l'instantané de l'analyse.

:::

## Configurer les analyses

Ouvrez **Antimalware > Réglages** pour définir la cible de scan, le mode de détection, la planification et les emplacements de stockage. La politique de scan reste visible, tandis que les sections avancées peuvent être dépliées individuellement ou ensemble. Le navigateur mémorise les sections laissées ouvertes.

![Antimalware Scanner settings screen](/img/wordpress-plugin/settings.png)

- **Scan policy** contrôle le mode de scan et la réponse par défaut. Utilisez **Lite** ou **Signatures only** lorsque vous avez besoin de moins de faux positifs sur une installation WordPress typique.
- **Schedule** peut s'exécuter chaque heure, deux fois par jour, chaque jour ou chaque semaine. WP-Cron dépend du trafic du site ; utilisez un planificateur système pour exécuter `wp cron event run --due-now` afin d'obtenir un timing prévisible.
- **Scope and limits** vous permet de définir des filtres et d'activer éventuellement l'inspection ZIP bornée. L'analyse d'archives est désactivée pour les analyses manuelles et planifiées par défaut, car les archives volumineuses peuvent consommer des ressources importantes.
- **Engine and storage** gère les emplacements privés des rapports, sauvegardes, quarantaine et cache de définitions. Gardez ces emplacements hors des fichiers du site que vous scannez.

## Examiner et corriger les détections

Les rapports listent l'intégrité, les vulnérabilités et les vérifications de réputation sous **Security findings**. Les correspondances de code et de signature apparaissent une seule fois sous **Malware detections**, avec chaque détection repliée initialement pour faciliter la lecture. Pointez ou focalisez une détection pour révéler ses actions de ligne. Les résultats de sécurité proposent **Add exception**, **Reopen** et restauration de fichiers de confiance lorsque cela est disponible ; les détections de malware proposent **Take action** et **Report finding** lorsqu'elles sont disponibles. Les résultats qui nécessitent un nouveau scan ou sont déjà traités gardent une case de sélection visible et désactivée.

L'historique des rapports prend en charge la sélection de lignes et les actions en masse. Déplacez les rapports plus anciens vers **Archived** avant de les supprimer définitivement ; les rapports archivés peuvent être restaurés à tout moment jusqu'à la suppression.

Les actions automatiques de nettoyage, quarantaine et suppression nécessitent une confirmation. Lite n'accepte pas les modifications de code dans le navigateur, et les fichiers mis en quarantaine ne peuvent être supprimés définitivement que depuis **Antimalware > Quarantine**. Full ajoute un éditeur de navigateur basé sur les diffs et la restauration depuis la quarantaine. Il refuse une action si le fichier a changé après le scan, donc relancez un scan avant d'agir sur des résultats périmés.

## Protéger les téléversements WordPress

**Scan and block malicious WordPress uploads** est activé par défaut dans **Settings > Scan policy**. Il vérifie les téléversements de médias et les ZIP de plugins ou thèmes avant que WordPress les accepte. Les fichiers avec des détections, ou sans couverture de scan fiable, sont bloqués et enregistrés dans un rapport pour examen.

Désactivez cette option uniquement si un autre contrôle de sécurité des téléversements est responsable de la même protection.

## Aide et diagnostics

La page **About** du plugin montre les versions installées du plugin et du moteur, ainsi que des liens vers la documentation, le support, les conseils de contribution et la licence. Pour les analyses FTP ou FTPS, configurez une URL de serveur sans identifiants dans les réglages et fournissez le mot de passe via la variable d'environnement `AMWSCAN_FTP_PASSWORD`; le plugin n'enregistre jamais les mots de passe FTP dans les options WordPress.

Pour les procédures de développement, de test et de publication, consultez le [README du plugin](https://github.com/marcocesarato/PHP-Antimalware-Scanner/tree/master/plugins/wordpress).
